packages/wasm-guest/tests/macro_error/lifetime_parameters.stderr
error: `workflow` functions should have no lifetime parameters
 --> tests/macro_error/lifetime_parameters.rs:4:17
  |
4 | async fn counter<'a>() {}
  |                 ^^^^
