packages/wasm-guest/tests/macro_error/lifetime_parameters.rs
use codastraea_wasm_guest::workflow;

#[workflow]
async fn counter<'a>() {}

fn main() {}
